--- a/Data602/Final_Project/FinalProjectChristopherEstevez.ipynb
+++ b/Data602/Final_Project/FinalProjectChristopherEstevez.ipynb
@@ -22,7 +22,7 @@
    "metadata": {},
    "source": [
     "# Overview\n",
-    "### This project is intended to inform and show my python data manipulation skills. The project consists of data from Centers for Medicare and Medicaid Services(CMS)Opioid Prescription Data for years 2013 and 2014. Many articles in the news reference the Opioid epidemic and this dataset does not tell the whole story, but highlights where the increase is coming from. This project highlights how I intend to use Python."
+    "### This project is intended to inform and show my python data manipulation skills. The project consists of data from the Centers for Medicare and Medicaid Services(CMS) Opioid Prescription Data for years 2013 and 2014. Many articles in the news reference the Opioid epidemic and this dataset does not tell the whole story, but highlights where the increases are happening. This project highlights how I intend to use Python."
    ]
   },
   {
