--- a/Data602/Final_Project/FinalProjectChristopherEstevez.ipynb
+++ b/Data602/Final_Project/FinalProjectChristopherEstevez.ipynb
@@ -1417,7 +1417,7 @@
    "source": [
     "# Conclusion\n",
     "\n",
-    "###  It was interesting to find that institutions account for mayor increases and decreases. For example, the previous chart identified Ambulatory Surgical Center and acute hospitals as having a decrease in prescriptions. Considering last year there was an increase of 2%, we cannot consider the opioid epidemic over. The 2% accounts for 1,595,883 additional prescriptions for the year 2014, and from those prescriptions many have the potential to become addicted. I wanted to display a map perspective of this dataset but was unable due to my python version incompatibility to mapplot. \n",
+    "###  It was interesting to find that institutions account for significant increases and decreases. For example, the previous chart identified Ambulatory Surgical Center and acute hospitals as having a decline in prescriptions. Considering last year there was an increase of 2%, and we cannot consider the opioid epidemic over. The 2% accounts for 1,595,883 additional prescriptions for the year 2014, and from those prescriptions, many have the potential to become addicted. I wanted to display a map perspective of this dataset but was unable due to my python version incompatibility to mapplot. \n",
     "\n",
     "# References\n",
     "### stackoverflow.com\n",
